practice of static factory method